resolved recipe image not showing up on recipe page

--- a/src/recipe/Recipe.css
+++ b/src/recipe/Recipe.css
@@ -25,8 +25,8 @@ div.title-container {
   height: 100%;
 }
 .recipe-pic img {
-  width: inherit;
-  height: inherit;
+  width: 100%;
+  height: 100%;
 }
 .picture-title {
   position: absolute;
